# devtools-mock-mcp

./: DISTRIBUTION_GUIDE.md  INSTALLATION.md  LICENSE  LOCAL_WHEEL_SETUP.md  MANIFEST.in  README.md  USER_INSTALLATION_GUIDE.md  devtools_mock_mcp_proxy  launch_devtools_mcp_proxy.py  pyproject.toml  requirements.txt  setup.py
devtools_ai_mock_mcp/: __init__.py  fastmcp_server.py  http_server_launcher.py  mock_data.py  proxy_server.py  server.py  server_http.py
docs/: DISTRIBUTION_GUIDE.md  INSTALLATION.md  LOCAL_WHEEL_SETUP.md  USER_INSTALLATION_GUIDE.md
tests/: test_server.py
