[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devtools-ai-mock-mcp-ayushe"
version = "0.1.0"
description = "A Model Context Protocol server that mocks DevTools AI functionality for MathWorks development workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=0.9.0"
]

[project.scripts]
devtools-ai-mock-mcp-ayushe = "devtools_ai_mock_mcp.server:main_cli"

[project.urls]
Homepage = "https://github.com/yourusername/devtools-mock-mcp"
Repository = "https://github.com/yourusername/devtools-mock-mcp"
Issues = "https://github.com/yourusername/devtools-mock-mcp/issues"
